--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,22 @@
-header{
+.header__style {
     background-color: #c6c6c6;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+}
+
+.description {
+    font-size: 30px;
+    background-color: yellowgreen;
+    margin-top: auto;
+    margin-right: 20px;
+}
+
+.reflesh__button{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: navy;
+    font-size: 30px;
+    color: #ffffff;
+    border-radius: 100vh;
 }
